switch to firebase

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,3 +1,42 @@
 {
-  "@@locale": "en"
+  "@@locale": "en",
+  "homeTitle": "Home",
+  "welcomeMessage": "Welcome!",
+  "accountTitle": "Account",
+  "settingsTitle": "Settings",
+  "themeSectionTitle": "Theme",
+  "themeSystem": "Use device setting",
+  "themeLight": "Light",
+  "themeDark": "Dark",
+  "accountSectionTitle": "Account",
+  "changeEmailLabel": "Change email",
+  "saveChanges": "Save changes",
+  "changeEmailSuccess": "Email updated.",
+  "sendResetEmail": "Send reset email",
+  "noEmailForResetMessage": "No email available for reset. Please sign in again.",
+  "emailInUseMessage": "That email is already in use.",
+  "requiresRecentLoginMessage": "Please reauthenticate and try again.",
+  "signOutTooltip": "Sign out",
+  "signInTitle": "Sign in",
+  "emailLabel": "Email",
+  "passwordLabel": "Password",
+  "signInButton": "Sign in",
+  "signUpButton": "Sign up",
+  "forgotPasswordButton": "Forgot password?",
+  "resetEmailSent": "Password reset email sent.",
+  "emailRequiredMessage": "Please enter your email.",
+  "passwordRequiredMessage": "Please enter your password.",
+  "wrongPasswordMessage": "Incorrect password. Please try again.",
+  "userNotFoundMessage": "No account found for that email.",
+  "genericErrorMessage": "Something went wrong. Please try again.",
+  "resetTitle": "Reset password",
+  "newPasswordLabel": "New password",
+  "confirmPasswordLabel": "Confirm password",
+  "updatePasswordButton": "Update password",
+  "passwordsDontMatch": "Passwords do not match.",
+  "passwordUpdated": "Password updated. Please sign in.",
+  "invalidEmailMessage": "Please enter a valid email address.",
+  "tooManyRequestsMessage": "Too many attempts. Please try again later.",
+  "weakPasswordMessage": "Password is too weak.",
+  "networkErrorMessage": "Network error. Check your connection and try again."
 }
