--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -1,3 +1,42 @@
 {
-  "@@locale": "es"
+  "@@locale": "es",
+  "homeTitle": "Inicio",
+  "welcomeMessage": "¡Bienvenido!",
+  "accountTitle": "Cuenta",
+  "settingsTitle": "Ajustes",
+  "themeSectionTitle": "Tema",
+  "themeSystem": "Usar configuración del dispositivo",
+  "themeLight": "Claro",
+  "themeDark": "Oscuro",
+  "accountSectionTitle": "Cuenta",
+  "changeEmailLabel": "Cambiar correo",
+  "saveChanges": "Guardar cambios",
+  "changeEmailSuccess": "Correo actualizado.",
+  "sendResetEmail": "Enviar correo de restablecimiento",
+  "noEmailForResetMessage": "No hay correo disponible para restablecer. Inicia sesión de nuevo.",
+  "emailInUseMessage": "Ese correo ya está en uso.",
+  "requiresRecentLoginMessage": "Vuelve a autenticarte e inténtalo de nuevo.",
+  "signOutTooltip": "Cerrar sesión",
+  "signInTitle": "Iniciar sesión",
+  "emailLabel": "Correo electrónico",
+  "passwordLabel": "Contraseña",
+  "signInButton": "Iniciar",
+  "signUpButton": "Registrarse",
+  "forgotPasswordButton": "¿Olvidaste la contraseña?",
+  "resetEmailSent": "Se ha enviado un correo para restablecer la contraseña.",
+  "emailRequiredMessage": "Por favor, introduce tu correo.",
+  "passwordRequiredMessage": "Por favor, introduce tu contraseña.",
+  "wrongPasswordMessage": "Contraseña incorrecta. Inténtalo de nuevo.",
+  "userNotFoundMessage": "No existe una cuenta con ese correo.",
+  "genericErrorMessage": "Algo salió mal. Inténtalo de nuevo.",
+  "resetTitle": "Restablecer contraseña",
+  "newPasswordLabel": "Nueva contraseña",
+  "confirmPasswordLabel": "Confirmar contraseña",
+  "updatePasswordButton": "Actualizar contraseña",
+  "passwordsDontMatch": "Las contraseñas no coinciden.",
+  "passwordUpdated": "Contraseña actualizada. Inicia sesión.",
+  "invalidEmailMessage": "Por favor, introduce un correo válido.",
+  "tooManyRequestsMessage": "Demasiados intentos. Inténtalo más tarde.",
+  "weakPasswordMessage": "La contraseña es demasiado débil.",
+  "networkErrorMessage": "Error de red. Revisa tu conexión e inténtalo de nuevo."
 }
